--- a/main.tex
+++ b/main.tex
@@ -129,7 +129,7 @@ periodicity 8 \cite{Polchinski} which is at the origin of the name `topological 
 \section {Internal Fine Tuning and Canonical Large Numbers}
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, particle physics and mathematics.
 \subsection {The Cosmic Fine-Tuning and the Topological Axis}
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\ Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
@@ -523,7 +523,6 @@ This is a dramatic geometrical confirmation (Fig. 6) for the visible Universe â€
 
 \begin{figure}[h]
 \centering
-%\includegraphics[width=5cm,height=6cm]{https://raw.githubusercontent.com/hol137/doc-latex/master/figures/triaxis.png}
 \includegraphics[width=5cm,height=6cm]{./figures/triaxis.png}
 \caption{Geo dimensional Universe-Grandcosmos couple. In a 3D Super-space, natural logarithms of length, time and mass ratios are considered as vectors. The logarithm of ratio of Grandcosmos radius by the Compton electron wavelength appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius by the electron Compton wavelength, and for mass ratio that of $M^{\prime}$ by the electron mass. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation between $e$, $a$ and involved logarithms reach precision $10^{-7}$.} 
 \end{figure}
@@ -585,7 +584,7 @@ T\{\hbar,\rho_{c} ,G_{F} \}\, = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.
 \begin{equation}
 T^{\prime}\{\hbar,G,m\} = \hbar^{3} /G^{2} m^{5} \approx 5.5224 \times 10^{57} s
 \end{equation}
-This would be the periodic time of a Super-cycle, which matches with Topological Axis at n = 30,
+One would conceive it as the periodic time of a Super-cycle, which matches with Topological Axis at n = 30,
 the holic dimension (see below), to 4\%. Comparing $T$ with the Kotov Non-Doppler Cosmic
 Oscillation period $t_{K} \approx 9600.60(2)$ s, one observes, to $0.04\%$:
 $$T/t_{K} \approx O_{M} /\sqrt{2}$$
@@ -609,7 +608,7 @@ $t^{\prime}_{e}\, = Gm_{e} /c^{3} = 2.2568 \times 10^{-66} s$
 confirms the above Planck's wall breakdown.
 
 \section{Intermediate Mathematical Constants}
-\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \subsection{The Eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
@@ -1013,7 +1012,7 @@ $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^
 (1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the 20th power of $F$, corresponding to the 20 normal amino-acids.  
 
 \section {Discussion}
-\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 There is presently an intense debate in physics community. Only a minority believes in a Single
 Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
