--- a/main.tex
+++ b/main.tex
@@ -1196,8 +1196,7 @@ International Publishing AG. A. Tadjer et al. (eds.), Quantum Systems in
 Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics
 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.
 
-\bibitem{Bonvin} Bonvin V. ``Holicow, New cosmograil time delays of HE 0435-1223'',
-arXiv: 1607.01790v2 (2016).
+\bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat ΛCDM model'', arXiv: astro-ph/1607.01790v2 (2016).
 
 \bibitem{Sanchez2} Sanchez F.M., Kotov V.A. and Bizouard C. ``Towards a synthesis of
 two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
@@ -1294,8 +1293,8 @@ ArXiv:1304.8107 (2013).
 \bibitem{Durham} Durham I.T. ``Sir Arthur Eddington and the Foundations of Modern
 Physics'' (2006), p. 111; arXiv:quant-ph/0603146v1.
 
-\bibitem{Widom} Widom A. et al. ``Electromagnetic signals from bacteria DNA''
-(2012); arXiv: 1104.311v2.
+\bibitem{Widom} A. Widom, J. Swain, Y. N. Srivastava, S. Sivasubramanian ``Electromagnetic signals from bacteria DNA''
+(2012); arXiv: physics 1104.3113v2.
 
 \bibitem{Salingaros} Salingaros N. ``Some remarks on the algebra of Eddington's E
 Numbers''. Foundations of Physics 15 (6), 683--691 (1985).
