--- a/main.tex
+++ b/main.tex
@@ -663,11 +663,11 @@ dimension n = 30, the natural extension of the above:
 \begin{equation}
 T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
-where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This is called the Holic Principle, relating to the apparent world. The Complete Holic
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This holic dimension 30 is the touchtone of the Topological axis, from which gauge bosons are deduced by Cartan-Bott reductions [19] (Fig. 1)
+
+This is called the Holic Principle, relating to the apparent world. The Complete Holic
 Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
-
-$$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$,
-
+$$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
 where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 4.1).
 
 
@@ -799,7 +799,7 @@ relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\subsection {$e$ is the optimal calculation basis}
+\subsection {The optimal calculation basis $e$ confirmed}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
@@ -826,9 +826,8 @@ R_{GC}/\lambdabar_M  = (e_{GC}^2)^{210}  \approx (137e/a)^{420}
 \end{equation}
 exhibiting the following property (0.3 ppm):
  $$ (a/137)^{420} \approx (137 - 3)/120 $$  
-with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, while $e_{GC}$ is compatible with the following rational number, in the ppb range, and tied to the heavy Leptons mass ratios by, to 3 ppm.
-$$e_{GC} = (3 \times 16 \times 787)/(13 \times 1069) \approx (a\mu/3\tau) (e/2)^{1/420}$$
-
+with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, while $e_{GC}$ is compatible with the following rational number, in the ppb range, and tied to the heavy Leptons mass ratios by, to 3 ppm:
+$$(a/137)e_{GC} \approx (48 \times 787)/(13 \times 1069) \approx (a\mu/3\tau) (e/2)^{1/420}$$
 This is a dramatic confirmation of the cosmical use of rational approximation of $e$, explaining the cosmos vastness (Section 2.2), and enligthting a double relation of $\mu$ and $\tau$ with $e$, to 0.01 \% and 0.06 \%:
 \begin{equation}
 ln\tau \approx 3e \approx a\mu/\tau 
@@ -837,8 +836,8 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 \begin{equation}
 2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
 \end{equation}
-where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
-The above study of fractional development of e leads to the following relation between $a$ and the Electron magnetic moment $2d_e$, in the ppb range: :$$a(e/2d_e-1) \approx 7^2-1/4d_e(496+1)$$ Note that $496 + 1 = 7 \times 71$, showing the largest prime 71 in the Monster cardinal.
+where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
+The above study of fractional development of $e$ leads to the following relation between $a$ and the Electron magnetic moment $2d_e$, in the ppb range: :$$a(e/2d_e-1) \approx 7^2-1/4d_e(496+1)$$ Note that $496 + 1 = 7 \times 71$, showing the largest prime 71 in the Monster cardinal.
 
 
 \subsection {Wyler's approach}
