--- a/main.tex
+++ b/main.tex
@@ -104,7 +104,7 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
 \caption{The Topological Axis. Double logarithm (y = lnln(Y)) of main dimensionless physical quantities 
 Y corresponds to the String dimension series n = 4k + 2, from k = 0 to k = 7, showing the Cartan-Bott
-periodicity 8 \cite{Polchinski} which is at the origin of the name `topological axis`. 
+periodicity 8 [19] which is at the origin of the name `topological axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
     is tied to bosonic critical dimension 26, while Cartan-Bott reduction leads to n = 18 (thermal photon, 
     tied to the the mammal wavelength throught the Sternheimer scale factor j), n = 10, (superstring 
@@ -745,7 +745,9 @@ u_{3}^{2^9} \approx (2(137^{2} + 48))^{64} \approx a^{a}
 defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role (see the following sub-section).
 
 Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
-$a^{a} \approx u_1^{3\times(2^{8}-1)}$
+\begin{equation}
+a^{a} \approx u_1^{3\times(2^{8}-1)}
+\end{equation}
 which defines $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
 simplest arithmetics generators. This opens a \textit{new research in pure mathematics}.
 
@@ -770,9 +772,7 @@ F/af \approx 496\approx j^{\delta}
 \end{equation}
 Also, to 8 ppm: $$\ln(O_{M}) /2\ln\ln\ln\ln(O_{M}) \approx 137$$ and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
-
 $$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$
-
 This confirms the above Complete Holic Principle, and the computation basis role of $\Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$ and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$ Now, from $209 = 137 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
