--- a/main.tex
+++ b/main.tex
@@ -762,29 +762,38 @@ related to the Monster group cardinal order, to 1.5 ppm:
 \begin{equation}
 O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}
 \end{equation}
-Moreover the above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm:
+Moreover the above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
 e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}
 \end{equation}
-implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms it is a computation basis, and the above relation implies, to 61 ppm:
+implying the Green-Schwarz string dimension 496, which is the third perfect number, after 6 and 28, and tied to the Brout-Englert-Higgs boson in the Topological Axis (Fig.1). The above Bizouard constant confirms it is a computation basis, and the above relation implies, to 61 ppm:
 \begin{equation}
 lnf\approx \pi e/4d_e
 \end{equation}
-One is struck by the following combination of the three dimensionless parameters, the electrical
-one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong ratio $f$, to 0.05 \% and 0.13 \%:
+The following combination of three main dimensionless parameters is remarkable: they are the electrical
+one $a$, the Fermi ratio $F =\sqrt{a_{w}}$ and the strong Bizouard ratio $f$, to 0.05 \% and 0.13 \%:
 \begin{equation}
 F/af \approx 496\approx j^{\delta}
 \end{equation}
 Also, to 8 ppm: $$\ln(O_{M}) /2\ln\ln\ln\ln(O_{M}) \approx 137$$ and the product of the 20 groups of the happy family tied
 to the Monster shows, to 0.015\%, 1\% and 0.9 \%:
-$$\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}$$
+\begin{equation}
+\Pi_{happy} \approx \delta \times a^{a} \approx j^{j^{\pi/3}} \approx (j/496)^2 \Gamma^{210}
+\end{equation}
 This confirms the above Complete Holic Principle, and the computation basis role of $\Gamma$ is moreover confirmed by, to 2\%: $$a^a \approx \Gamma^{209}$$ and the order of the Baby-Monster $$O_B\approx\Gamma^{24}$$ Now, from $209 = 137 + 3\times 24$:
 \begin{equation}
 O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
 where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
 
-Note that $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
+The total product of the 26 sporadic orders $\Pi_{26}$ verifies, to 1.8 ppm:
+$$ \Pi_{26} \approx (9/2)(R_{GC}np_0/\lambdabar_M p^2)$$
+Now $\Pi_{26}$ is close to $e^{4 \times 210}$, whose $a^{th}$ root is again very remarkable (65ppm, 98 ppm, 5 ppb):
+\begin{equation}
+e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx /26 \times (2 \times 26 + 1)/3
+\end{equation}
+The ppb range precision of the last term means clearly that a rationalisation of $e^{2e}$ is occuring, where the canonic dimension 26 plays a central role.
+Note that, in Eq. (40), $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
 $$O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2} $$
 where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
