--- a/main.tex
+++ b/main.tex
@@ -790,9 +790,10 @@ The total product of the 26 sporadic orders $\Pi_{26}$ verifies, to 1.8 ppm:
 $$ \Pi_{26} \approx (9/2)(R_{GC}np_0/\lambdabar_M p^2)$$
 Now $\Pi_{26}$ is close to $e^{4 \times 210}$, whose $a^{th}$ root is again very remarkable (65ppm, 98 ppm, 5 ppb):
 \begin{equation}
-e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx /26 \times (2 \times 26 + 1)/3
+e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx 26 \times (2 \times 26 + 1)/3
 \end{equation}
 The ppb range precision of the last term means clearly that a rationalisation of $e^{2e}$ is occuring, where the canonic dimension 26 plays a central role.
+
 Note that, in Eq. (40), $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
 $$O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2} $$
 where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
