--- a/main.tex
+++ b/main.tex
@@ -795,10 +795,12 @@ e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx 26 \times (2 \times 26 + 
 The ppb range precision of the last term means clearly that a rationalisation of $e^{2e}$ is occuring, where the canonic dimension 26 plays a central role.
 
 Note that, in Eq. (40), $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.1\%:
-$$O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2} $$
+\begin{equation}
+O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx  n_{ph}/\delta^{1/2}
+\end{equation}
 where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. Therefore 496, $p$ and $g_0$ are also privileged computations bases. 
 
-From the above relation and Eqs (37) and (40), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
+From the above relation and Eqs (37) and (41), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
 Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
 \begin{equation}
 a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
