--- a/main.tex
+++ b/main.tex
@@ -823,14 +823,14 @@ The Topological Axis shows clearly that the Grandcosmos is defined by the follow
 f(k = e^{2}) = exp(2^{e^{2+1/2}}) \approx exp(e^{2e}+e^{2})
 \end{equation}
 where the supplementary term $exp(e^2)$ is close to $a^{3/2}$. Note these properies of the 'economic number', to 
-0.4 \%, 6 ppm, 0.4 ppm, 0.04, 0.4, 0.2, 0.6 \%:
+0.4 \%, 6 ppm, 0.4 ppm,0.3, 0.04, 0.4, 0.2, 0.6 \%:
 $$
 \begin{array}{ll}
 %
 \displaystyle
 e^{e^e}\approx (lnp)^{lnp}  
-\approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 \\
-\approx j^6/F \approx FlnF/2 \approx 2WlnZ \approx Zln(\lambdabar_{CMB}/\lambdabar_e) 
+\approx 137 (e^{e})^3 \approx e^e a \sqrt{pH} (p/p_0)^2 \approx j^6/F \\
+\approx FlnD/ln(2\pi) / \approx FlnF/2 \approx 2WlnZ \approx Zln(\lambdabar_{CMB}/\lambdabar_e) 
 \end{array}
 $$
 Note that $e^2$ is the limit of the following musical series:
