--- a/main.tex
+++ b/main.tex
@@ -754,6 +754,8 @@ a^{a} \approx u_1^{3\times(2^{8}-1)}
 which defines $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
 simplest arithmetics generators. This opens a \textit{new research in pure mathematics}.
 
+Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \ approx 140^2 + 1 \ approx a(a+6)$ to 4 ppm. This comes back to the antique problem of the rationalisation of $sqrt2$. In fact its correct value corresponds to a $8^{th}$ fractional term very close to $sqrt5$, so leading to $sqrt2_a \approx N_{\sqrt5}/D_{\sqrt5}$, with $ N_{\sqrt5} = 239sqrt5 + 99 \approx \Gamma^2\approx O_B^{1/12} $, see Eq.(), and $ D_{\sqrt5} = 13^2sqrt5 + 70 \approx O_M^{3/61}$, connecting the orders of the two Monsters. Note that $61/2 \approx F\a^2$ to 0.04 \%. This introcuces the next section.
+
 \subsection{The Sporadic Groups}
 
 The above main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
