--- a/main.tex
+++ b/main.tex
@@ -754,7 +754,7 @@ a^{a} \approx u_1^{3\times(2^{8}-1)}
 which defines $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
 simplest arithmetics generators. This opens a \textit{new research in pure mathematics}.
 
-Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \ approx 140^2 + 1 \ approx a(a+6)$ to 4 ppm. So, this comes back to the antique problem of the rationalisation of $sqrt{2}$. In fact its correct value corresponds to a $8^{th}$ fractional term very close to $sqrt{5}$, so leading to $sqrt{2}_a \approx N_{\sqrt{5}}/D_{sqrt{5}}$, with $ N_{sqrt{5}} = 239sqrt{5} + 99 \approx \Gamma^2\approx O_B^{1/12} $, see Eq.(), and $ D_{sqrt{5}} = 13^2sqrt{5} + 70 \approx O_M^{3/61}$, connecting the orders of the two Monsters. Note that $61/2 \approx $F\a^2$ to 0.04 \%. This introcuces the next section.
+Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \ approx 140^2 + 1 \ approx a(a+6)$ to 4 ppm. So, this comes back to the antique problem of the rationalisation of $sqrt{2}$. In fact its correct value corresponds to a $8^{th}$ fractional term very close to $sqrt{5}$, so leading to $sqrt{2}_a \approx N_{\sqrt{5}}/D_{sqrt{5}}$, with $ N_{sqrt{5}} = 239sqrt{5} + 99 \approx \Gamma^2\approx O_B^{1/12} $, see Eq.(), and $ D_{sqrt{5}} = 13^2sqrt{5} + 70 \approx O_M^{3/61}$, connecting the orders of the two Monsters. Note that $61/2 \approx F\a^2$ to 0.04 \%. This introduces the next section.
 
 \subsection{The Sporadic Groups}
 
