--- a/main.tex
+++ b/main.tex
@@ -749,7 +749,7 @@ defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central
 
 Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 \begin{equation}
-a^{a} \approx u_1^{3\times(2^{8}-1)}
+a^{a} \approx u_{1}^{3\times(2^{8}-1)}
 \end{equation}
 which defines $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
 simplest arithmetics generators. This opens a \textit{new research in pure mathematics}.
