--- a/main.tex
+++ b/main.tex
@@ -756,12 +756,12 @@ simplest arithmetics generators. This opens a \textit{new research in pure mathe
 
 Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \approx a(a+6)$ to 4 ppm. So, this comes back to the antique problem of the rationalisation of $\sqrt{2}$. Its correct value shows a $8^{th}$ fractional term very close to $\sqrt{5}$, so leading to $\sqrt{2}_a \approx N_{a}/D_{a}$, with $ N_{a} = 239 \sqrt{5} + 99 \approx \Gamma^{2}
 \approx O_B^{1/12} $ and $ D_{a} = 13^2 \sqrt{5} + 70 \approx O_M^{3/61}$,
-so connecting the two Monster's orders, because $61/2 \approx F/a^{2}$ to 0.04 \%
+so connecting the two Monster's orders, because $61/2 \approx F/a^{2}$ to 0.04 \%.
 This introduces the next section.
 
 \subsection{The Sporadic Groups}
 
-The above main term $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
+The above main term of Eq. (34) $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
 tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
 related to the Monster group cardinal order, to 1.5 ppm:
 \begin{equation}
