--- a/main.tex
+++ b/main.tex
@@ -1212,7 +1212,7 @@ structure of the physical world'', Nature 278, 605--612 (1979).
 
 \bibitem{Eddy} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
-\bibitem{Sanchez1} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. Springer
+\bibitem{Sanchez1} Sanchez F.M. ``Coherent Cosmology''. Vixra.org,1601.0011. A coherent Resonant Coherent Cosmology Approach and Its Implications in Microphysics and Biology. Springer
 International Publishing AG. A. Tadjer et al. (eds.), Quantum Systems in
 Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics
 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.
