--- a/main.tex
+++ b/main.tex
@@ -879,7 +879,8 @@ where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appea
 Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
-Since $R/\lambdabar_e \approx 2^128$, the decomposition 6 = 3 \times 2 leads to a natural partition of the Universe in the Grandcosmos, and the following approximation for the celerity ratio $$ C/c\approx3^{128} \sqrt{ln2/2}$$ This confirms the role of bases quark up = 5 and \textit{quark d = 6 with a double structure} in a sriking parallele between nuclear physics and cosmology. Elimination of $q$ leads to (2.6 \%):
+Since $R/\lambdabar_e \approx 2^128$, the decomposition of 6 leads to a natural partition of the Universe in the Grandcosmos, and the following approximation for the celerity ratio $$ C/c\approx3^{128} \sqrt{ln2/2}$$ This confirms the role of quark up = 5 and \textit{quark d = 6 with a double structure}, in a sriking parallele between nuclear physics and cosmology.
+Elimination of $q$ leads to (2.6 \%):
 $$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$
  In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. This is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
 \begin{equation}
