--- a/main.tex
+++ b/main.tex
@@ -336,7 +336,7 @@ is the value for which the mean cosmic value is also the atomic one:
 with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly$$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
-Rydbergh correction factor and $p_{0} = 6\pi^{5}$ the Canonic Lenz-Wiler Approximation of $p$ (Section 4):
+Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 4):
 $$R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}$$
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while
 the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
