--- a/main.tex
+++ b/main.tex
@@ -350,7 +350,7 @@ range, with $\Gamma$, the Atiyah Constant (section 4.5).
 From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
-The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group, which appear again below.
+The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group.
 
 \subsubsection{The Kotov Cosmic Coherent Oscillation Period}
 
