--- a/main.tex
+++ b/main.tex
@@ -345,8 +345,10 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
-range, with $\Gamma$, the Atiyah Constant (section 4.5).
-
+range, with $\Gamma$, the Atiyah Constant (section 4.5). With the classical electron radius $r_e = \lambdabar_e/a$, to 17 ppm:
+\begin{equation}
+\lambdabar_M / r_{e} \approx (R_1l_K/R^{prime}r_e)^3
+\end{equation}
 From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
