--- a/main.tex
+++ b/main.tex
@@ -345,10 +345,7 @@ $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx
 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
-range, with $\Gamma$, the Atiyah Constant (section 4.5). With the classical electron radius $r_e = \lambdabar_e/a$, to 17 ppm:
-\begin{equation}
-\lambdabar_M / r_{e} \approx (R_1l_K/R^{prime}r_e)^3
-\end{equation}
+range, with $\Gamma$, the Atiyah Constant (section 4.5). 
 From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is
 associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
@@ -964,7 +961,11 @@ F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \appro
 \end{array}
 $$
 (0.7 ppm, 0.3 \%, 0.1 \%, 0.4  \% and 30 ppb). This shows that Cosmos uses the rationalisation 137/50 for $e$, and that the product $Pi_{par}$ of the 6 pariah group orders plays a role. The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
-$$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$ 
+$$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
+With the classical electron radius $r_e = \lambdabar_e/a$, to -17 ppm and 16 ppm:
+\begin{equation}
+\lambdabar_M / r_{e} \approx (R_1l_K/R^{prime}r_e)^3 \approx(4\piP/p_K)^4
+\end{equation}
 Moreover $\tau$ correlates with the
 term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 \begin{equation}
