--- a/main.tex
+++ b/main.tex
@@ -85,7 +85,7 @@ The existence of relations that are not explained by known physical theories, is
 
 So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-The present article shows that \textit{Physics is a unique part of Mathematics}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relationships confirm the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
+The present article shows that \textit{Physics is a part of Mathematics}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relationships confirm the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
 
 \textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
@@ -332,21 +332,27 @@ matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversi
 \subsubsection{Single Electron Cosmology}
 
 The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the
-Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. It
-is the value for which the mean cosmic value is also the atomic one:
+Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. 
+It is the value for which the mean cosmic value is also the atomic one:
 \begin{equation}
 \frac{\sum(1/n)}{\sum(1/n^{2})} = a^{\prime}
 \end{equation}
 with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
-$$R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly$$
+$$
+R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly
+$$
 very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
 Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 4):
-$$R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}$$
+$$
+R_{1} = ( p_{0} /p_{G} )(\beta R R^{\prime})^{1/2}
+$$
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while
 the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
 with $p/p_{0}$:
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
-
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. With the classical electron radius $r_e = \lambdabar_e/a$, to 17 ppm:
+\begin{equation}
+\lambdabar_M / r_{e} \approx (R_1l_K/R^{prime}r_e)^3 \approx(4\pi P/p_K)^4
+\end{equation} 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
 range, with $\Gamma$, the Atiyah Constant (section 4.5). 
