--- a/main.tex
+++ b/main.tex
@@ -148,7 +148,7 @@ So, \textit{the speed $c$ is eliminated}, in accordance with
 Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
 most recent measurement \cite{Bonvin}: 72(3) (km/s)/Megaparsec, which confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower, by $9\%$, value.
 
-Consider the wavelength $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ of the visible Universe of mass $M$. This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
+Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ . This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1,
 corresponding to n $\approx 2e^{e}$, to $0.01\%$. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
 and results from the imbrication of relations of the form 
 $
@@ -173,12 +173,12 @@ The overall large number $2^{256}$ has an evident computational character, confi
 dramatic appearance of the Eddington Large Number.
 
 In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation which is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
-$$
+$
 R/r_H \approx (4\pi \lambda_{CMB} /r)^{4}
-$$ 
+$ 
 precise to $0.6\%$. 
-Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $$R/ \lambdabar_{e} \approx
-( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$$ to $1.7\%$
+Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $R/ \lambdabar_{e} \approx
+( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$
 The appearance of the neutrino field is conform
 with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
 antimatter Oscillatory Bounce \cite{Sanchez2}.
