--- a/main.tex
+++ b/main.tex
@@ -901,6 +901,7 @@ This reaches the ppb precision for $\pi_1 = 77368/24627$, corresponding to the f
 that a rational approximation for $\pi$ is a intermediate calculation basis. 
 
 \subsection {The Archimedes constant $\pi$ as a calculation basis}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
 
 The value of the Topological Function for the main String
  dimension 26 renders, to 0.1\%, the same Lenz-Wyler form $f(26) \approx 6(2\pi^{2} a^{3} )^{5}$, where $2\pi^{2}a^{3}$ is the area of a 4-sphere of radius $a$. Moreover, with $n/p$ the mass ratio Neutron/Proton, to 0/3\%, 0.02\% and 1ppm:
