--- a/main.tex
+++ b/main.tex
@@ -351,7 +351,7 @@ the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt
 with $p/p_{0}$:
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. With the classical electron radius $r_e = \lambdabar_e/a$, to 17 ppm:
 \begin{equation}
-\lambdabar_M / r_{e} \approx (R_1l_K/R^{prime}r_e)^3 \approx(4\pi P/p_K)^4
+\lambdabar_M / r_{e} \approx (R_1l_K/R^{\prime}r_e)^3
 \end{equation} 
 This $t_K$ value will be confirmed, in the ppb range, by the value
 deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
