--- a/main.tex
+++ b/main.tex
@@ -744,6 +744,7 @@ F^3/a \approx (3/e)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
 confirming that $j$ and $\Gamma$ has the status of invariant generalised dimension, i.e. they are, according to the Holic Principle, privileged exponents.
 
 \subsection{Ubiquity of $a^{a}$}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 is a number of parameters, so can be interpreted as a dimension, so, according to the Holic Principle , it must be also a privilegied exponent. So the term $a^a$ must be central.
     
