--- a/main.tex
+++ b/main.tex
@@ -85,7 +85,7 @@ The existence of relations that are not explained by known physical theories, is
 
 So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the forgetting of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Through a so-called Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-The present article shows that \textit{Physics is a part of Mathematics}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, these relationships confirm the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
+The present article shows that \textit{Physics is an unique part of Mathematics, which are presently uncomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory but with complete rehabilitation of the tachyonic bosonic string theory.
 
 \textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why does people ask questions ? We propose that the parameters are optimal basis in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and three-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
