--- a/main.tex
+++ b/main.tex
@@ -824,7 +824,7 @@ Thus, \textit{the Atiyah symmetry infers a relation between the three mathematic
 
 \section{Fine-tuning with basic mathematical constants}
 %\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
-%\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
+\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 Since some dimensionless physical parameters are very precisely measured, we looked for
 relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
